completed part 1: searching through tree, for small data

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Ver_2_CS170_Fall_2021_Small_data__86.txt
 Ver_2_CS170_Fall_2021_LARGE_data__14.txt
 Ver_2_CS170_Fall_2021_LARGE_data__22.txt
 Ver_2_CS170_Fall_2021_LARGE_data__27.txt
+.vscode
