Updated code to include changes made on thursday for submission

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Ver_2_CS170_Fall_2021_LARGE_data__14.txt
 Ver_2_CS170_Fall_2021_LARGE_data__22.txt
 Ver_2_CS170_Fall_2021_LARGE_data__27.txt
 .vscode
+DryBeanDataset
